Overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1440,7 +1440,7 @@ input[type="radio"].visually--hidden {
 }
 
 .footer-info-list {
-    width: 325px;
+    width: 335px;
     padding: 0;
     margin: 11px 0 0 0;
     display: -webkit-box;
@@ -1450,8 +1450,8 @@ input[type="radio"].visually--hidden {
     flex-wrap: wrap;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    -ms-flex-direction: row;
+    flex-direction: row;
     max-height: 45px;
     -webkit-box-align: start;
     -ms-flex-align: start;
@@ -1459,7 +1459,8 @@ input[type="radio"].visually--hidden {
 }
 
 .footer-info-list .footer-info-item {
-    margin-right: 30px;
+    width: 50%;
+    padding-right: 5px;
 }
 
 
